vanleeuwenairconditioning/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress
  namespace: vanleeuwenairconditioning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  serviceName: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      securityContext:
        fsGroup: 82
      containers:
        - name: nginx
          image: nginx:alpine
          resources:
            requests:
              memory: 25Mi
              cpu: 50m
            limits:
              memory: 50Mi
              cpu: 80m
          securityContext:
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
            - name: tmp
              mountPath: /tmp
            - name: cache
              mountPath: /var/cache/nginx/
            - name: run
              mountPath: /var/run/
            - name: wordpress-data
              mountPath: /var/www/html
        - name: wordpress
          image: deviavir/wordpress-mysqli:6-fpm-alpine
          ports:
            - name: fpm
              containerPort: 9000
          resources:
            requests:
              memory: 300Mi
              cpu: 300m
            limits:
              memory: 500Mi
              cpu: 600m
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www/html
            - name: tmp
              mountPath: /tmp
            - name: mysql-ca
              mountPath: /secrets/ca-certificate.crt
              subPath: mysql-ca-certificates.crt
              readOnly: true
      volumes:
        - name: tmp
          emptyDir: {}
        - name: cache
          emptyDir: {}
        - name: run
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: mysql-ca
          secret:
            secretName: mysql-ca-bundle
            optional: false
  volumeClaimTemplates:
    - metadata:
        name: wordpress-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: do-block-storage
        resources:
          requests:
            storage: 1Gi
