vanleeuwenairconditioning/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: vanleeuwenairconditioning
  labels:
    app: wordpress
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: wordpress
