vanleeuwenairconditioning/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: vanleeuwenairconditioning
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: vanleeuwenairconditioning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
    - host: www.vanleeuwenairconditioning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
  tls:
    - hosts:
        - vanleeuwenairconditioning.com
        - www.vanleeuwenairconditioning.com
      secretName: vanleeuwenairconditioning-com-tls
